# pintrs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py  benchmark.py  decorators.py  numpy_arrays.py
python/pintrs/: __init__.py  __init__.pyi  _core.pyi  context.py  definitions.py  errors.py  formatting.py  group.py  logarithmic.py  matplotlib_support.py  numpy_support.py  pandas_support.py  system.py  testing.py
python/pintrs/facets/: __init__.py
python/pintrs/facets/numpy/: __init__.py  quantity.py
python/pintrs/facets/plain/: __init__.py
src/: array_quantity.rs  default_en.txt  definition.rs  errors.rs  lib.rs  parser.rs  registry.rs  units_container.rs
tests/: conftest.py  test_app_registry_port.py  test_babel.py  test_babel_port.py  test_compat_fixes.py  test_compat_port.py  test_compatibility.py  test_context.py  test_contexts_port.py  test_converters_port.py  test_dask_port.py  test_definitions_port.py  test_diskcache_port.py  test_dropin_compat.py  test_errors_port.py  test_formatter_port.py  test_formatting.py  test_formatting_port.py  test_group.py  test_infer_base_unit_port.py  test_issues_port.py  test_log_units_port.py  test_logarithmic.py  test_matplotlib_port.py  test_measurement_port.py  test_new_features.py  test_non_int_port.py  test_numpy.py  test_numpy_func_port.py  test_numpy_port.py  test_optional_dependency_behavior.py  test_pandas.py  test_pint_api_compat.py  test_pint_compat.py  test_pint_eval_port.py  test_pitheorem_port.py  test_quantity.py  test_quantity_port.py  test_sparse_port.py  test_system.py  (+6 more)
