[package]
name = "pintrs"
version = "0.4.1"
edition = "2021"
description = "Fast Rust-based Python extension for physical unit manipulation"

[lib]
name = "pintrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
indexmap = "2"
once_cell = "1"
